// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DependencyExtractionWebpackPlugin Webpack \`combine-assets\` should produce expected output: Asset file 'assets.php' should match snapshot 1`] = `
"<?php return array('fileA.js' => array('dependencies' => array('lodash', 'wp-blob'), 'version' => 'bf200ecb3dcb6881a1f39d63cd243206'), 'fileB.js' => array('dependencies' => array('wp-token-list'), 'version' => '0af6c51a8e6ac934b85a78835a93cb5c'));
"
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`combine-assets\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "wp",
      "tokenList",
    ],
    "userRequest": "@wordpress/token-list",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`dynamic-import\` should produce expected output: Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array('dependencies' => array('lodash', 'wp-blob'), 'version' => '1166b9d1044bb1eded0a4193fadf87f8');
"
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`dynamic-import\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`function-output-filename\` should produce expected output: Asset file 'chunk--main--main.asset.php' should match snapshot 1`] = `
"<?php return array('dependencies' => array('lodash', 'wp-blob'), 'version' => '4c78134607e6ed966df3de5d3d38b15f');
"
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`function-output-filename\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`has-extension-suffix\` should produce expected output: Asset file 'index.min.asset.php' should match snapshot 1`] = `
"<?php return array('dependencies' => array('lodash', 'wp-blob'), 'version' => 'dabeb91f3cb9dd73d48d044af194a158');
"
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`has-extension-suffix\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`no-default\` should produce expected output: Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array('dependencies' => array(), 'version' => 'bb85a9737103c7054b00770c09034c6e');
"
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`no-default\` should produce expected output: External modules should match snapshot 1`] = `Array []`;

exports[`DependencyExtractionWebpackPlugin Webpack \`no-deps\` should produce expected output: Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array('dependencies' => array(), 'version' => '091ffcd70d94dd16e773c0ddca465fdc');
"
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`no-deps\` should produce expected output: External modules should match snapshot 1`] = `Array []`;

exports[`DependencyExtractionWebpackPlugin Webpack \`option-function-output-filename\` should produce expected output: Asset file 'chunk--main--main.asset.php' should match snapshot 1`] = `
"<?php return array('dependencies' => array('lodash', 'wp-blob'), 'version' => '4c78134607e6ed966df3de5d3d38b15f');
"
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`option-function-output-filename\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`option-output-filename\` should produce expected output: Asset file 'main-foo.asset.php' should match snapshot 1`] = `
"<?php return array('dependencies' => array('lodash', 'wp-blob'), 'version' => '4c78134607e6ed966df3de5d3d38b15f');
"
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`option-output-filename\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`output-format-json\` should produce expected output: Asset file 'main.asset.json' should match snapshot 1`] = `"{\\"dependencies\\":[\\"lodash\\"],\\"version\\":\\"a8f35bfc9f46482cc48a78d50e7099da\\"}"`;

exports[`DependencyExtractionWebpackPlugin Webpack \`output-format-json\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`overrides\` should produce expected output: Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array('dependencies' => array('wp-blob', 'wp-script-handle-for-rxjs', 'wp-url'), 'version' => '2a29b245fc3d0509b5a8039bb4cde515');
"
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`overrides\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "window",
    "request": "rxjs",
    "userRequest": "rxjs",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "rxjs",
      "operators",
    ],
    "userRequest": "rxjs/operators",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "wp",
      "url",
    ],
    "userRequest": "@wordpress/url",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`runtime-chunk-single\` should produce expected output: Asset file 'a.asset.php' should match snapshot 1`] = `
"<?php return array('dependencies' => array('wp-blob'), 'version' => 'afb97a54745e17cee9638e4d9d2322f9');
"
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`runtime-chunk-single\` should produce expected output: Asset file 'b.asset.php' should match snapshot 1`] = `
"<?php return array('dependencies' => array('lodash', 'wp-blob'), 'version' => 'ed750e4e046b77c317cb852294984ef3');
"
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`runtime-chunk-single\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`wordpress\` should produce expected output: Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array('dependencies' => array('lodash', 'wp-blob'), 'version' => '4c78134607e6ed966df3de5d3d38b15f');
"
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`wordpress\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`wordpress-require\` should produce expected output: Asset file 'main.asset.php' should match snapshot 1`] = `
"<?php return array('dependencies' => array('lodash', 'wp-blob'), 'version' => 'ed2bd4e7df46768bb3c23c8dc0ba5c50');
"
`;

exports[`DependencyExtractionWebpackPlugin Webpack \`wordpress-require\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "window",
    "request": "lodash",
    "userRequest": "lodash",
  },
  Object {
    "externalType": "window",
    "request": Array [
      "wp",
      "blob",
    ],
    "userRequest": "@wordpress/blob",
  },
]
`;
